--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,
+#root {
+    height: 100%;
+}
+
+* {
+    font-family: 'Inter';
+}
+
+*:focus {
+    outline: none !important;
+}
+
+body {
+    @apply bg-neutral-50;
+}
